Rewritten ansible playbook and managed into roles. Updated udev rules and now it's starting brscan-skey tool automaticly.

--- a/roles/mounting/templates/AppleVolumes.j2
+++ b/roles/mounting/templates/AppleVolumes.j2
@@ -3,5 +3,7 @@
 
 # By default all users have access to their home directories.
 {{ backup_mount }} "Backup" options:usedots,upriv,tm
+{{ scans_directory }} "Scans" options:usedots,upriv,tm
+
 
 # End of File
